[metadata]
name= ReunionLog
version = 0.2.0.0
author= nickgismokato
author_email= nickvillumlaursen@gmail.com
url= https://github.com/nickgismokato/ReunionLog
#packages= ['OAuth', 'Report']
license= MIT License
description= A small package to access and use WarcraftLogs API
long_description= A small package that can use the WarcraftLogs api and from there call function to retrive data fram WarcraftLogs
#install_requires=[
#    "gql-query-builder >= 0.1.7"
#]
keywords= python, WarcraftLogs-API, package
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.8
package_dir =
    =src

[options.packages.find]
where=src